# packstack

./: .gitignore  .gitmodules  .gitreview  .stestr.conf  .zuul.yaml  Gemfile  MANIFEST.in  Puppetfile  Puppetfile-centos7  Puppetfile-centos8  Puppetfile.ironic  README  README.md  README.rst  README_ORIGINAL  Rakefile  SECURITY.md  engine_validators.py  external_modules.txt  openstack_modules.txt  other-requirements.txt  output_messages.py  packstack  requirements.txt  run_setup.py  run_setup.sh  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Makefile  conf.py  packstack.rst
installer/: basedefs.py  common_utils.py  setup_controller.py
modules/: ospluginutils.py
packstack/: version.py
playbooks/: packstack-centos8-pre.yaml  packstack-centos9-pre.yaml  packstack-fedora-pre.yaml  packstack-integration-tempest.yaml  packstack-multinode.yaml  packstack-post-compute.yaml  packstack-pre.yaml  upload-logs.yaml
plugins/: cinder_250.py  dashboard_500.py  glance_200.py  global_000.py  keystone_100.py  mysql_001.py  nova_300.py  nova_api_310.py  nova_cert_320.py  nova_common_390.py  nova_compute_330.py  nova_network_340.py  nova_sched_350.py  nova_volume_360.py  openstack_client_400.py  puppet_950.py  qpid_002.py  serverprep_901.py  sshkeys_000.py  swift_600.py
spec/: openstack-packstack.spec  packstack.spec
tests/: scenario-py3.sh  scenario000.sh  scenario001.sh  scenario002.sh  scenario003.sh  test.py  test_base.py  test_ospluginutils.py  test_plugin_prescript.py  test_plugin_serverprep.py  test_validators.py
tools/: copy-logs.sh  (+2 more)
(+567 files in other folders)
